--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,10 @@
   background-color: blue;
 }
 
-.nav-link.active{
-    color: #0056b3;
+.nav-item.active {
+  background-color: #0056b3;
+}
+.nav-item.active a{
+    color: #fff;
+    
 }
